<resources>
    <string name="app_name">Chat</string>
    <string name="action_settings">Settings</string>
    <string name="hint1">Enter Your Email</string>
    <string name="hint6">Enter Your Password</string>
    <string name="next">Sign In</string>
    <string name="hint2">Welcome to Chat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>
    <string name="my_account">My Account</string>
    <string name="hint3">سوف يتم ارسال رمز التاكيد اليك برسالة قصيرة</string>
    <string name="hint4">ادخل رمز التاكيد</string>
    <string name="hint5">انقر الكامرة لتحميل صورتك الشخصية</string>
    <string name="skip">تخطي</string>
    <string name="facebook_app_id">1274519912621627</string>
    <string name="fb_login_protocol_scheme">fb1274519912621627</string>
    <string name="or">Or</string>
    <string name="hint7">Type Something</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_out">Sign Out</string>
    <string name="action_search">action_search</string>
    <string name="search_for_friends">Search for friends</string>
    <string name="chat_app_project">Chat App Project</string>
    <string name="version_1_0_1_for_android">Version : 1.0.1 for Android</string>

    <string-array name="item_names">
        <item>Invite Friends</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
