<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_confirm_code"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/background"
    tools:context="com.alameen.wael.hp.chatapplication.ConfirmCode">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/hint3"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed"
        android:id="@+id/title"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="50dp"
        android:id="@+id/input_1">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/code"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/hint4"
            android:inputType="phone"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/next"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/next"
        android:background="@color/colorAccent"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/input_1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
