<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@color/background"
        tools:context="com.alameen.wael.hp.chatapplication.Login">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:layout_marginTop="20dp"
            android:text="@string/hint2"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/black" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginTop="140dp"
            android:id="@+id/input_1">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:layout_alignParentRight="true"
                android:paddingRight="20dp"
                android:layout_gravity="center"
                android:hint="@string/hint1"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_1"
            android:layout_marginTop="20dp"
            android:id="@+id/input_2"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:layout_alignParentRight="true"
                android:paddingRight="20dp"
                android:layout_gravity="center"
                android:hint="@string/hint6"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/normal_sign_in"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/next"
            android:background="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/input_2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/or"
            android:textSize="15sp"
            android:layout_below="@+id/normal_sign_in"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/black" />

        <com.google.android.gms.common.SignInButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:id="@+id/google_sign_in"
            android:layout_below="@+id/normal_sign_in">

        </com.google.android.gms.common.SignInButton>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/app"
            android:layout_below="@+id/title"
            android:layout_marginTop="6dp"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</ScrollView>
