<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alameen.wael.hp.chatapplication.About">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/appBarLayout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:text="@string/app_name"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/white"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        app:srcCompat="@drawable/app"
        android:layout_below="@+id/appBarLayout"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/about_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_marginTop="54dp"
        android:gravity="center_horizontal"
        android:text="@string/chat_app_project"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/about_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_chat"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:text="@string/version_1_0_1_for_android"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/about_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_two"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:text="Supervisor\nDr. Mohamed Natiq Fadhl\n\nStudents\nWael Lauy Sadoon\nHind Natiq Ghani"
        android:textSize="20sp"/>

</RelativeLayout>
